# yttrium

./: .appveyor.yml  .clang-format  .clang-tidy  .cppcheck-suppress  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  SConstruct  appveyor.yml  bootstrap.bat  build.default.ini  build.ini  find.sh  gdb.sh  note.sh  run.sh  snap.sh  src_stat.sh  stat.sh  symbols.sh  todo.sh  todo.yaml  valgrind.sh  yttrium.yaml
benchmarks/buffer/: CMakeLists.txt  main.cpp
benchmarks/jpeg/: CMakeLists.txt  main.cpp
examples/3d/: CMakeLists.txt  data.index  game.cpp  game.h  main.cpp  material.cpp  material.h  model.cpp  model.h  obj.cpp  obj.h
examples/tetrium/: CMakeLists.txt  blocks.cpp  blocks.h  commands.cpp  commands.h  cursor.cpp  cursor.h  data.cpp  data.h  data.index  game.cpp  game.h  graphics.cpp  graphics.h  logic.cpp  logic.h  main.cpp  statistics.cpp  statistics.h  tetrium.cpp  tetrium.h  tetrium.rc
libs/application/: CMakeLists.txt
libs/audio/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/core/: CMakeLists.txt  intrinsics.h  main.cpp  translation.cpp
libs/engine/: CMakeLists.txt  console.cpp  resource_loader.cpp  utf8.h
libs/geometry/: CMakeLists.txt
libs/gui/: CMakeLists.txt
libs/gui_ion/: CMakeLists.txt
libs/i18n/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/ion/: CMakeLists.txt
libs/main/: CMakeLists.txt
libs/renderer/: CMakeLists.txt
libs/storage/: CMakeLists.txt
libs/test/: CMakeLists.txt  utils.cpp  utils.h
libs/yttrium/: CMakeLists.txt  resource_loader.cpp  string_utils.cpp
src/: CMakeLists.txt  SConscript  config.h.in  console.cpp  flags.cpp  globals.cpp  resource_loader.cpp  static_string.cpp  string.cpp  string_utils.cpp  tiny_string_map.cpp  translation.cpp
src/application/: application.cpp  private.cpp  private.hpp
src/audio/: backend.cpp  backend.h  logging.h  manager.cpp  manager.h  manager.hpp  music.cpp  music.h  music_reader.h  ogg_vorbis.cpp  ogg_vorbis.hpp  player.cpp  player.h  player.hpp  playlist.cpp  playlist.h  playlist.hpp  reader.cpp  reader.h  reader.hpp  sound.cpp  sound.h  streamer.cpp  streamer.h  streamer.hpp  wav.cpp  wav.hpp
src/base/: allocatable.cpp  allocatable.h  allocator_status.cpp  assert.cpp  buffer.cpp  buffer_file.cpp  buffer_file.h  condition.cpp  condition.h  dir.cpp  dir.h  file.cpp  file.h  file.hpp  files.hpp  fourcc.h  fourcc.hpp  heap_allocator.cpp  heap_allocator.hpp  ieee_float.h  instance_guard.h  instance_guard.hpp  log.cpp  log.h  log_manager.cpp  log_manager.hpp  logger.cpp  mutex.cpp  mutex.h  mutex.hpp  object.cpp  pointer.cpp  pool.cpp  private_base.h  private_base.hpp  proxy_allocator.cpp  safe_bool.cpp  signal.cpp  signal.h  signal.hpp  (+20 more)
src/display/: screen.h  terminal.cpp  window.h
src/file_system/: file_system.cpp  file_system.hpp  package.cpp
src/gui/: actions.cpp  actions.h  cursor.h  exceptions.h  gui.cpp  gui.h  image.cpp  image.h  key_lookup.cpp  key_lookup.h  layer.cpp  layer.h  layout.cpp  layout.h  logging.h  manager.cpp  manager.h  properties.cpp  properties.h  property.cpp  property.h  property_dumper.h  property_loader.h  scene.cpp  scene.h  screen.cpp  screen.h  texture_font.cpp  texture_font.h  types.h  widget.cpp  widget.h  widget_data.cpp  widget_data.h
src/i18n/: localization.cpp  translation.cpp  translation.h
src/image/: dds.cpp  dds.h  dds_format.h  dds_private.h  formats.cpp  formats.h  image.cpp  image.h  image.hpp  jpeg.cpp  jpeg.h  png.cpp  png.h  png.hpp  processing.cpp  processing.h  tga.cpp  tga.h  tga.hpp  tga_format.h  tga_private.h  utils.cpp  utils.h
src/io/: buffer_file.h  file.cpp  file.h  package.cpp  package.h  reader.cpp  reader.h  resource_loader.cpp  resource_manager.cpp  storage.cpp  writer.cpp  writer.h  ypq.cpp  ypq.h
src/ion/: document.cpp  document.h  list.cpp  logging.h  node.cpp  node.h  object.cpp  parser.cpp  parser.h  parser.hpp  reader.cpp  utils.cpp  utils.h  value.cpp  writer.cpp
src/math/: margins.cpp  matrix.cpp  vector.cpp
src/memory/: allocatable.h  atomic_status.cpp  atomic_status.h  buffer.cpp  buffer_memory.cpp  buffer_memory.h  buffer_memory_tracker.cpp  buffer_memory_tracker.h  buffer_memory_tracking.cpp  buffer_memory_tracking.h  heap_allocator.cpp  heap_allocator.h  manager.cpp  named_allocator.cpp  named_allocator.h  new.h  pages.cpp  pages.h  pool.cpp  pool.h  private_allocator.h  proxy_allocator.cpp  raw.h  sized_allocation.h  system_allocator.cpp
src/package/: manager.cpp  manager.h  package.cpp  package.h  ypq.cpp  ypq.h  yttrium_package.cpp  yttrium_package.h  yttrium_package.hpp
src/platform/: file.h  gl.h  memory.h  openal.h  window.h
src/renderer/: api.cpp  api.h  backend.h  buffer.h  builtin.cpp  builtin.h  builtin_data.cpp  builtin_data.h  context.cpp  context.h  debug_renderer.cpp  debug_renderer.h  debug_texture.cpp  debug_texture.h  exception.h  gl.cpp  gl.h  index_buffer.h  material.cpp  material.h  mesh_data.cpp  mesh_data.h  modifiers.cpp  pass.cpp  pass.h  renderer.cpp  renderer.h  text.cpp  texture.cpp  texture.h  texture_cache.cpp  texture_cache.h  texture_font.cpp  texture_font.h  vertex_buffer.h
src/resource/: loader.cpp  resource_ptr.cpp
src/resources/: resource_loader.cpp  resource_ptr.cpp  texture_font.cpp  texture_font.h  translation.cpp
src/script/: args.cpp  code.cpp  context.cpp  context.h  logging.h  manager.cpp  manager.h  parser.cpp  parser.h  scanner.cpp  scanner.h  value.cpp
src/storage/: file.cpp  file.h  package.cpp  package.h  reader.cpp  reader.h  source.cpp  source.h  storage.cpp  (+2 more)
tests/: CMakeLists.txt  SConscript  bindings.cpp  buffer.cpp  buffer.h  buffer_appender.cpp  common.h  dir.cpp  file.cpp  flags.cpp  gui.cpp  gui_loading.cpp  image.cpp  image.h  image_formats.cpp  image_formats.h  ion.cpp  ion_reader.cpp  ion_writer.cpp  iostream.cpp  iostream.h  key.cpp  key_lookup.cpp  main.cpp  margins.cpp  matrix.cpp  memory.cpp  memory_pages.cpp  object.cpp  package.cpp  point.cpp  pointer.cpp  private.cpp  reader.cpp  rect.cpp  resource_loader.cpp  shared_ptr.cpp  small_string_map.cpp  source.cpp  static_string.cpp  (+10 more)
(+2026 files in other folders)
